# jupyter-query-magics

./: LICENSE  README.md  pyproject.toml
cellspell/: __init__.py  cypher.py  gql.py  mongodb.py  sparql.py  xpath.py
cellspell/spells/: __init__.py  cypher.py  gql.py  mongodb.py  sparql.py  xpath.py
examples/: colab_cypher.ipynb  colab_mongodb.ipynb  colab_sparql.ipynb  colab_xpath.ipynb  demo_cypher.ipynb  demo_cypher.py  demo_mongodb.ipynb  demo_mongodb.py  demo_sparql.ipynb  demo_sparql.py  demo_xpath.ipynb  demo_xpath.py
tests/: test_mongodb_parser.py  test_sparql_parser.py  test_xpath_helpers.py
